--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/recharts": "^1.8.29",
     "gsap": "^3.13.0",
     "next": "15.5.3",
     "react": "19.1.0",
